# primetax-sped-crossref

./: .gitignore  README.md  pyproject.toml
.claude/commands/: novo-cruzamento.md  resumir-entendimento.md
docs/: debitos-conhecidos.md
docs/arquitetura/: spec-manual-integrado-retificacao-rev2.md
docs/historico/: analise-ng-frente1-suspensa-2026-04-29.md  sprint-contabil-prompt-elaboracao.md
docs/layouts-oficiais/: ecd-layout.md  ecf-layout.md  efd-contribuicoes-layout-parte-1.md  efd-contribuicoes-layout-parte-2.md  efd-contribuicoes-layout-parte-3.md  efd-icms-ipi-layout.md
packaging/: primetax-sped-gui.spec
scripts/: anonimizar_sped.py  baixar_tabelas_dinamicas.py  build_gui.py
src/: cli.py
src/crossref/: engine.py
src/db/: repo.py  schema.sql
src/gui/: __init__.py  __main__.py  app.py  demo.py
src/models/: registros.py
src/parsers/: ecd.py  ecf.py  efd_contribuicoes.py  efd_icms_ipi.py  tabelas_dinamicas_ecf.py
src/reports/: excel_diagnostico.py  excel_reconciliacao.py  excel_reconciliacao_import.py  word_parecer.py
src/rules/: retencoes_fonte.py  tese_69_ajuste_base.py  tese_69_consolidados.py  tese_69_icms.py
src/tables/: cst_cofins.py  cst_pis.py  encoding_patterns.py
tests/: conftest.py
tests/crossref/: test_camada1_integridade.py  test_cruzamento_07_tese69.py  test_cruzamento_08_tese69_c181.py  test_cruzamento_09_tese69_d201.py  test_cruzamento_10_cst_aliquota_c170.py  test_cruzamento_11_tipo_item_cfop_insumo.py  test_cruzamento_12_cst_70_75_auditoria.py  test_cruzamento_13_ausencia_f100.py  test_cruzamento_14_f120_depreciacao.py  (+35 more)
(+256 files in other folders)
