[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "primetax-sped-crossref"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "PySide6>=6.7",
]

[project.scripts]
primetax-sped = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-data]
src = ["db/schema.sql"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
